# NDK-JNI

./: README.md  settings.gradle
NDKJNIday02/: readme.md
NDKJNIday02/src/main/cpp/: native-lib.cpp
NDKJNIday02/src/main/java/com/ihubin/ndkjni/: JavaFromNativeActivity.java  JavaNativeActivity.java  MainActivity.java  NativeUtil.java
NDKJNIday04/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDKJNIday05/: readme.md
app/: build.gradle
app/src/androidTest/java/com/seachal/seachal_ndk_jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/seachal/seachal_ndk_jni/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/seachal/seachal_ndk_jni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ndkjniday04seachal/: build.gradle
ndkjniday04seachal/src/androidTest/java/com/seachal/ndkjniday04seachal/: ExampleInstrumentedTest.java
ndkjniday04seachal/src/main/: AndroidManifest.xml
ndkjniday04seachal/src/main/java/com/seachal/ndkjniday04seachal/: MainActivity.java
ndkjniday04seachal/src/main/res/values/: strings.xml
ndkjniday04seachal/src/test/java/com/seachal/ndkjniday04seachal/: ExampleUnitTest.java
